[20]: Valid Parentheses + added some JUnit dependencies